--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,28 +22,28 @@
     background-color: rgba(107, 93, 82, 0.5);
 }
 
-body.dark-mode ::-webkit-scrollbar-thumb {
+.dark ::-webkit-scrollbar-thumb {
     background-color: rgba(168, 155, 140, 0.3);
 }
 
-body.dark-mode ::-webkit-scrollbar-thumb:hover {
+.dark ::-webkit-scrollbar-thumb:hover {
     background-color: rgba(168, 155, 140, 0.5);
 }
 
 /* Logo visibility toggle */
-body:not(.dark-mode) .logo-light {
+.dark .logo-light {
     display: block;
 }
 
-body:not(.dark-mode) .logo-dark {
+.dark .logo-dark {
     display: none;
 }
 
-body.dark-mode .logo-dark {
+html:not(.dark) .logo-dark {
     display: block;
 }
 
-body.dark-mode .logo-light {
+html:not(.dark) .logo-light {
     display: none;
 }
 
